fix: første utkast utvidetrett - kronisk sykt barn (#94)
* fix: første utkast utvidetrett - kronisk sykt barn

* lagt til basis for midletidig alene ny søknad